Fix workitem content overflow

--- a/src/components/MemoList/list.css
+++ b/src/components/MemoList/list.css
@@ -16,8 +16,14 @@
   margin-bottom: 0;
 }
 
+.listWrapper > p {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
 .listWrapper > span:first-child {
   width: 24px;
+  flex-shrink: 0;
   text-align: right;
 }
 .listWrapper > span:first-child::after {
